# DefensiveMamans

./: README.md
Multi/Maman14/client/: backup.info  client.py  main.py
Multi/Maman14/client/models/: request.py  response.py
Multi/Maman14/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
Multi/Maman14/server/models/: request.cpp  request.h  response.cpp  response.h
Multi/Maman14/server/utils/: fs.cpp  fs.h  random.cpp  random.h  serialize.cpp  serialize.h  strings.cpp  strings.h
Multi/Maman15/: README.md.txt
Multi/Maman15/client/: client.py  main.py  try.txt
Multi/Maman15/client/models/: request.py
Multi/Maman15/client/utils/: logger.py
Multi/Maman15/clientnew/: try.cpp
Multi/Maman15/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
Multi/Maman15/server/models/: request.cpp  request.h  response.cpp  response.h
Multi/Maman15/server/utils/: fs.cpp  fs.h  random.cpp  random.h  strings.cpp  strings.h
Multi/Maman15/servernew/: consts.py  main.py  server.py
Multi/Maman15/servernew/dal/adapters/: dal_adapter.py  sqlite_adapter.py
Multi/Maman15/servernew/dal/instances/: users_sqlite_adapter.py
Multi/Maman15/servernew/models/request/: header.py  payload.py  request.py  request_codes.py
Multi/Maman15/servernew/models/response/: header.py  (+1 more)
Multi/Maman15/servernew/utils/: encryption.py
cpp/Maman11/: CMakeLists.txt  ex1.docx  maman11.cpp  maman11.h  my_vec.cpp  my_vec.h  read_csv.cpp  read_csv.h  vecs_all.cpp  vecs_all.h
cpp/Maman11/test_files/: try.csv
python/Maman13/: fruit.py  lsts.py  main.py  meta.py  pros.py  try.py
(+1 files in other folders)
